static/css/style.css
/* ... */
.btn-check:focus+.btn-brand-primary,
.btn-check:active+.btn-brand-primary:focus-visible {
    box-shadow: 0 0 0 .25rem rgba(130, 138, 145, .5)
}

.btn {
    font-family: 'Baloo 2', Arial, Helvetica, sans-serif;
}

.btn-danger {
    font-size: 1.2rem;
    color: #fff;
    background-color: var(--bs-danger-alt);
    border-color: var(--bs-danger-alt);
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
}

.btn-danger:hover {
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
    background-color: var(--bs-danger);
    border-color: var(--bs-danger);
}

.btn-danger:focus {
    box-shadow: 0 0 0 .25rem rgba(130, 138, 145, .5);
    background-color: var(--bs-danger);
    border-color: var(--bs-danger);
}

.btn-secondary {
    color: #fff;
    background-color: var(--bs-seconadry-alt);
    border-color: var(--bs-seconadry-alt);
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
}

.btn-secondary:hover {
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
    background-color: var(--bs-secondary);
    border-color: var(--bs-secondary);
}

.btn-secondary:focus {
    box-shadow: 0 0 0 .25rem rgba(130, 138, 145, .5);
    background-color: var(--bs-secondary);
    border-color: var(--bs-secondary);
}

.content-panel {
    border: 2px solid var(--border-grey);
    border-radius: 5px;
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
    background-color: #30303085;
}

.content-panel h1 {
    text-align: center;
}

/* FORM STYLES */

.form-control,
.form-select,
.form-check-input {
    background-color: var(--bg-form);
    color: var(--text-light);
    border-color: var(--border-grey);
}

.form-control:focus,
.form-select:focus,
.form-check-input:focus {
    box-shadow: 0 0 2px 1px var(--brand-primary-color);
    background-color: var(--bg-form);
    color: var(--text-light);
    border-color: var(--brand-primary-color);
}

.form-check-input:checked {
    background-color: var(--bg-form);
    border-color: var(--border-grey);
}

.invalid-feedback {
    color: var(--text-light);
    background-color: var(--bs-danger-alt);
    border-radius: 5px;
    padding: 5px;
    border: 1px solid var(--bs-danger);
}

/* NAVBAR STYLES */

.navbar-logo-text,
.navbar-logo-icon {
    height: 50px;
}

.navbar-dark .navbar-nav .nav-link {
    color: var(--muted-text-light);
}

.navbar-dark .navbar-nav .nav-link:hover {
    color: var(--text-light);
}

.cart-icon {
    font-size: 1.5rem;
    color: var(--text-light);
}

.cart-icon:hover {
    color: var(--brand-primary-color);
    text-decoration: none;
}

.cart-counter {
    background-color: var(--brand-primary-color);
    width: 20px;
    height: 20px;
    position: absolute;
    border-radius: 50%;
    left: 15px;
    bottom: -5px;
    font-size: 15px;
    font-weight: bold;
    text-align: center;
    line-height: 20px;
    color: var(--text-dark);
    font-family: 'Baloo 2', Arial, Helvetica, sans-serif;
    box-shadow: 0 0 0 3px var(--text-dark);
}

/* FOOTER STYLES */

footer {
    color: var(--muted-text-light);
    box-shadow: 0 -.5rem 1rem rgba(0, 0, 0, .15) !important;
}

/* MODAL STYLES */

.modal-content {
    background-color: #303030ef;
    border: 2px solid var(--border-grey);
}

.modal-header {
    border-bottom: 2px solid var(--border-grey);
}

.modal-footer {
    border-top: 2px solid var(--border-grey);
}

.save-slot-preview {
    width: 100%;
    border: 1px solid var(--border-grey);
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
}

.save-slot-button {
    width: 100%;
}

#id_title:disabled {
    background: transparent;
}

/* TOAST NOTIFICATION STYLES */

#toast-container {
    /* set z-index to appear above bootstrap modal background */
    z-index: 1056;
}

.toast {
    font-size: 1rem;
    font-weight: bold;
    opacity: 0.95;
}

.toast-success,
.toast-info,
.toast-debug,
.toast-error,
.toast-warning {
    background-color: var(--bg-grey);
    color: var(--text-dark);
}

.toast-success>.toast-header,
.toast-info>.toast-header {
    background-color: var(--bs-success);
}

.toast-debug>.toast-header,
.toast-error>.toast-header,
.toast-warning>.toast-header {
    background-color: var(--bs-danger);
}

/* SKETCHBOOK STYLES */

.control-panel {
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
    background-color: #30303075;
}

.drawing-prompt-box {
    background-color: var(--bg-light);
    border: 2px solid var(--border-grey);
    border-radius: 5px;
    color: var(--text-dark);
}

/* flex grids for buttons */

.flex-wrap-holder {
    display: flex;
    flex-wrap: wrap;
}

.prompt-button {
    flex-basis: calc(50% - 4px);
    margin: 2px;
}

.control-button {
    flex-basis: calc(50% - 4px);
    margin: 2px;
}

.settings-button {
    font-size: 1rem;
    flex-basis: calc(50% - 4px);
    margin: 2px;
}

/* drawing canvas */

#sketchbook-scaler {
    transform-origin: 0px 0px !important;
}

#sketchbook-background {
    height: 980px;
    width: 1340px;
    background-image: url("/media/svg/sketchbook-background.svg");
}

#sketchbook {
    position: absolute;
    top: 110px;
    left: 30px;
    cursor: crosshair;
    touch-action: none;
}

#paper {
    position: absolute;
    top: 110px;
    left: 30px;
    transform-origin: 0px 0px !important;
}

.plain-paper {
    display: none;
}

.watermarked-paper {
    background-image: url("/media/svg/watermark.svg");
}
/* ... */

